packages/scrabble-solver/src/components/Results/Results.module.scss
@import 'styles/mixins';

$row-padding-horizontal: calc(var(--spacing--m) + var(--spacing--s));

.results {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 100%;
  font-family: var(--font--family--title);
  font-size: var(--font--size--s);
}

.emptyState {
  flex: 1;
}

.list {
  transition: var(--transition);

  &.outdated {
    filter: blur(2px);
  }
}

.header {
  position: relative;
  z-index: 1;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-bottom: var(--border);
  font-size: var(--font--size--s);
  font-weight: 700;
}

.headerButton {
  @include button-reset;
  @include focus-effect;

  cursor: pointer;
  text-transform: uppercase;
}

.headerButtonLabel {
  @include ellipsis;

  flex: 0 1 auto;
  text-align: left;
}

.result {
  @include button-reset;

  user-select: none;
  transition: var(--transition);
  cursor: pointer;
  font-weight: 400;

  &:focus,
  &:hover {
    &:not(:disabled) {
      background-color: var(--color--primary);
      color: white;
    }
  }
}

.resultContent {
  display: flex;
  align-items: center;
  justify-content: space-between;
  text-align: left;
}

.cell {
  display: flex;
  align-items: center;
  padding: var(--spacing--s);

  .result &:first-child,
  .headerButton:first-child & {
    padding-left: $row-padding-horizontal;
  }

  .result &:last-child,
  .headerButton:last-child & {
    padding-right: $row-padding-horizontal;
  }

  &:last-child {
    flex: 1;
    text-align: right;
  }
}

.word {
  @include ellipsis;

  $width: 180px;

  flex: 0 0 $width;
  max-width: $width;
  text-transform: uppercase;
}

.stat {
  $width: 50px;

  flex: 0 0 $width;
  max-width: $width;
  text-align: center;
}

.points {
  flex: 1 0 80px;
  font-weight: bold;
}

.outdatedButton {
  display: block;
  margin: 0 auto;
  margin-top: var(--spacing--xxl);

  @include tablet {
    margin-top: var(--spacing--l);
  }
}

.sortIcon {
  $size: 15px;

  flex: 0 0 auto;
  width: $size;
  height: $size;
  margin-left: var(--spacing--s);
}

